modal fixes on small laptop

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -49,7 +49,10 @@ $laptop: 1280px;
 }
 
 .confirm-modal {
-  max-width: 700px !important;
+  max-width: 600px !important;
+  @media (max-height: 660px) {
+    max-width: 486px !important;
+  }
   .modal-content {
     border-radius: 10px;
     border: none;
@@ -57,14 +60,27 @@ $laptop: 1280px;
       background-color: #ffe8dc;
       border-radius: 10px;
       justify-content: center;
-      padding: 30px 0px;
+      padding: 20px 0px;
       border: none;
       .btn-close {
         display: none;
       }
+      .modal-title {
+        display: flex;
+            justify-content: center;
+        .confirm-modal__img {
+          @media (max-height: 660px) {
+            max-width: 50%;
+          }
+        }
+      }
+      
     }
     .modal-body {
       padding: 20px 0px 34px 0px;
+      @media (max-height: 660px) {
+        padding: 12px 0px 20px 0px;
+      }
       .confirm-modal__title {
         color: $secondary-color;
         font-weight: 800;
